# silkroadv2

./: package.json  pnpm-lock.yaml
site/: .env.template  package.json  tailwind.config.js
site/components/checkout/PaymentMethodView/: PaymentMethodView.tsx  types.tsx
site/components/common/Navbar/: Navbar.tsx
site/components/ui/MyModal/: ButtonTwo.module.css  ButtonTwo.tsx  MyModal.tsx  Select.module.css  Select.tsx  choose-chain.tsx  jfc.tsx
site/config/: wasmd.tsx
site/pages/: 404.tsx  _app.tsx  index.tsx
site/vinci/: LICENSE  package.json
site/vinci/contracts/egay/: Cargo.toml  ecommerce_dapp.wasm  jfc.wat
site/vinci/contracts/egay/src/: contract.rs  error.rs  state.rs
site/vinci/contracts/stargaze-base-factory/: package.json
site/vinci/contracts/stargaze-base-minter/: package.json
site/vinci/contracts/stargaze-sg721-base/: package.json
site/vinci/contracts/stargaze-sg721-metdata-onchain/: package.json
site/vinci/contracts/stargaze-sg721-nt/: package.json
site/vinci/contracts/stargaze-splits/: package.json
site/vinci/contracts/stargaze-vending-factory/: package.json
site/vinci/contracts/stargaze-vending-minter/: package.json
site/vinci/contracts/stargaze-whitelist/: package.json
site/vinci/scripts/: codegen.js
